...
            "state" : "translated",
            "value" : "美国标准译本"
          }
        }
      }
    },
    "Books" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bücher"
          }
...
            "state" : "translated",
            "value" : "在此处或在 iPhone、iPad、Mac 上收藏经文，通过 iCloud 同步。"
          }
        }
      }
    },
    "Favorites" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoriten"
          }
...
            "state" : "translated",
            "value" : "在 iPhone、iPad 或 Mac 上高亮经节，它们会通过 iCloud 同步。"
          }
        }
      }
    },
    "Highlights" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Markierungen"
          }
...
            "state" : "translated",
            "value" : "笔记已删除"
          }
        }
      }
    },
    "Notes" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notizen"
          }
...
            "state" : "translated",
            "value" : "阅读 %@"
          }
        }
      }
    },
    "Remove" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entfernen"
          }
...
            "state" : "translated",
            "value" : "移除"
          }
        }
      }
    },
    "Remove from Favorites" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aus Favoriten entfernen"
          }
...
            "state" : "translated",
            "value" : "取消收藏"
          }
        }
      }
    },
    "Scripture Alone" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scripture Alone"
          }
...
            "state" : "translated",
            "value" : "Scripture Alone"
          }
        }
      }
    },
    "Selected" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ausgewählt"
          }
...
            "state" : "translated",
            "value" : "已选择"
          }
        }
      }
    },
    "Speak" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vorlesen"
          }
...
            "state" : "translated",
            "value" : "手表版 ASV 中没有这段经文。"
          }
        }
      }
    },
    "Translation" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Übersetzung"
          }
...
